Fixing missing background

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -19,7 +19,7 @@ header {
 
   main {
     flex: 1 0 auto;
-    background-image: url(background.png);
+    background-image: image-url(background);
     background-size: cover;
   }
 
